# data-quality-llm

./: CLAUDE.md  README.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: errors.py  results.py  rules.py  tables.py
backend/app/prompts/: explain_failure.md  rule_from_nl.md  rule_from_schema.md
backend/app/schemas/: errors.py  explain.py  rules.py  runs.py  tables.py
backend/app/services/: ai_generator.py  db.py  ge_engine.py  llm_cache.py  pk_inspector.py  rules_store.py  runs_store.py  type_compat.py
backend/db/: 001_dq_schema.sql  002_run_results_status.sql  003_llm_cache.sql  004_run_results_rows.sql  005_dirty_data.sql  schema.sql  seed.sql
backend/tests/: conftest.py  test_ai_generator_type_compat.py  test_explain.py  test_llm_cache.py  test_prompt_expectations.py  test_rules.py  test_rules_multi_turn.py  test_runs.py  test_runs_async.py  test_tables.py  test_type_compat.py  test_violating_rows.py
docs/: ai-integration.md  ai-tools-usage.md  architecture.md  day1-plan.md  day2-plan.md  day3-plan.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: DiffLines.tsx  ErrorState.tsx  LoadingSkeleton.tsx  NlChatThread.tsx  NlRuleInput.tsx  ResultExplainPanel.tsx  ResultRow.tsx  ResultsView.tsx  RuleCard.tsx  RuleEditModal.tsx  RuleFilter.tsx  RulesView.tsx  RunButton.tsx  SchemaView.tsx  TableSidebar.tsx  TableTabs.tsx  ViolatingRowsTable.tsx
frontend/lib/: api.ts  errorMessages.ts  mutations.ts  queries.ts
(+4 files in other folders)
